--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best way of online food delivery.</title>
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" media="screen and (max-width:1120px)" href="../css/phone.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" media="screen and (max-width:1120px)" href="phone.css">
     <link href="https://fonts.googleapis.com/css2?family=Grenze+Gotisch&display=swap" rel="stylesheet">
 
 </head>
