--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <nav class="navbar">
             <div id="logo">
-                <img src="../img/logo.png" alt="">
+                <img src="img/logo.png" alt="">
             </div>
             <ul id="list">
                 <li>
@@ -52,7 +52,7 @@
         </h1>
 
         <div id="div1">
-            <img src="../img/fh1.jpg" alt="image loading error">
+            <img src="img/fh1.jpg" alt="image loading error">
             <!-- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                .</p>-->
             <h2 class="heading">Food Ordering</H2>
@@ -61,14 +61,14 @@
 
         <div id="div2">
 
-            <img src="../img/s2.jpg" alt="image loading error">
+            <img src="img/s2.jpg" alt="image loading error">
             <h2 class="heading">Food Catring</h2>
 
 
         </div>
         <div id="div3">
 
-            <img src="../img/s3.png" alt="image loading error">
+            <img src="s3.png" alt="image loading error">
             <!-- <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
              .</p>
@@ -94,13 +94,13 @@
         Now You can join us on Social media:
         <div id="mediaimg">
             <a href="https://www.instagram.com/?hl=en" target="_blank">
-                <img src="../img/insta1.png" alt="image loading error">
+                <img src="img/insta1.png" alt="image loading error">
             </a>
 
 
             <a href="https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&lwv=110"
                 target="_blank">
-                <img src="../img/fb2.png" alt="image loading error">
+                <img src="img/fb2.png" alt="image loading error">
             </a>
         </div>
 
@@ -120,13 +120,13 @@
         Now You can join us on Social media:
         <div id="mediaimg">
             <a href="https://www.instagram.com/?hl=en" target="_blank">
-                <img src="../img/insta1.png" alt="image loading error">
+                <img src="img/insta1.png" alt="image loading error">
             </a>
 
 
             <a href="https://www.facebook.com/login/device-based/regular/login/?login_attempt=1&lwv=110"
                 target="_blank">
-                <img src="../img/fb2.png" alt="image loading error">
+                <img src="img/fb2.png" alt="image loading error">
             </a>
         </div>
 
