--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
     <section class="Contact" id="Contact1">
         <h1 class="heading">Contact Us</h1>
         <div id="cn">
-            Contact Number: &nbsp &nbsp &nbsp &nbsp <a href="tel:9557798510"> 9557798510</a>
+            Contact Number: &nbsp &nbsp &nbsp &nbsp 9557798510
         </div>
         <div id="email">
             Email US: &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-           <a href="mailto:shubhamkumar.sk383@gmail.com">
-     shubhamkumar.sk383@gmail.com</a>
+         shubhamkumar.sk383@gmail.com
         </div>
         <br>
         <br>
