--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
             Contact Number: &nbsp &nbsp &nbsp &nbsp 9557798510
         </div>
         <div id="email">
-            Email US: &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-         shubhamkumar.sk383@gmail.com
+            Email US: &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp shubhamkumar.sk383@gmail.com
         </div>
         <br>
         <br>
